[package]
name = "locmess"
version = "1.0.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
repository = "https://github.com/Canop/locmess"
description = "look at the mess that are your LOC"
edition = "2018"
keywords = ["LOC", "LOL"]
license = "MIT"
categories = []

[dependencies]
anyhow = "1.0"
argh = "0.1.3"
char_reader = "0.1"
cli-log = "1.2"
crossterm = "0.19.0"
git2 = { version="0.13", default-features=false }
log = "0.4"
minimad = "0.7.0"
phf = { version = "0.8", features = ["macros"] }
thiserror = "1.0"

[dependencies.termimad]
version = "0.10.0"
default-features = false
features = ["special-renders"]

[profile.release]
debug = false
lto = "fat"
codegen-units = 1

[patch.crates-io]
# minimad = { path = "../minimad" }
# termimad = { path = "../termimad" }
# cli-log = { path = "../cli-log" }
# char_reader = { path = "../char_reader" }
